--- a/index.html
+++ b/index.html
@@ -101,7 +101,6 @@
 				<img src="img/galleta.png" height="300" width="250" alt="">
 			</div>
 		</div>
-
 			
 			
 		<div class="container">
@@ -125,7 +124,7 @@
 		</div>
 
 		<div class="container">
-			<div class="precios">
+			<div id="precios">
 				<div class ="subtitulo">
 					<h2>
 						Precios
