solo hice un footer para mirar que funciona y ojala no se pierda

--- a/index.html
+++ b/index.html
@@ -187,7 +187,10 @@
 				</div>
 			</div>
 		</div>
-
+	
+	<footer>
+		<h2>Camilo Garcia - Sebastian Gamez - Jhonatan Garcia - German Alfonso</h2>
+	</footer>
 	</div>
 	
 	<script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
